dll优化打包大小

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <!-- <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script> -->
+    <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script> -->
 </head>
 <style>
     body {
@@ -15,9 +17,9 @@
 </style>
 
 <body>
-    <div>
+    <div id="root">
         this is test
-        <img src="../src/image/login_bg.jpg"/>
+        <img src="../src/image/login_bg.jpg" />
     </div>
 </body>
 
