--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <!-- <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script> -->
     <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script> -->
+<script src="https://cdn.bootcss.com/vue/2.5.21/vue.js"></script>
 </head>
 <style>
     body {
