--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <!-- <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script> -->
-    <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script> -->
-<script src="https://cdn.bootcss.com/vue/2.5.21/vue.js"></script>
+    <script src="https://cdn.bootcss.com/vue/2.5.21/vue.js"></script>
 </head>
-<style>
-    body {
-        color: purple
-    }
-</style>
 
 <body>
-    <div id="root">
-        this is test
-        <img src="../src/image/login_bg.jpg" />
-    </div>
+    <noscript>
+        <strong>We're sorry but aaa doesn't work properly without JavaScript enabled. Please enable it to
+            continue.</strong>
+    </noscript>
+    <div id="app"></div>
 </body>
 
 </html>
